// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DS Modal Dialog renders slot content to actions 1`] = `
<dialog
  aria-labelledby="dialog--3__heading"
  class="ds-c-dialog"
  id="dialog--3"
  open=""
  role="dialog"
  rootid="static-id"
  tabindex="-1"
>
  <div
    class="ds-c-dialog__window"
  >
    <div
      class="ds-c-dialog__header"
    >
      <h2
        class="ds-c-dialog__heading"
        id="dialog--3__heading"
      >
        dialog heading
      </h2>
      <button
        aria-label="Close modal dialog"
        class="ds-c-close-button ds-c-dialog__close"
        id="dialog--3__close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="ds-c-icon ds-c-icon--close ds-c-icon--close-thin "
          id="dialog--3__close__icon"
          viewBox="-2 -2 18 18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 13.0332964L13.0332964 0M13.0332964 13.0332964L0 0"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <div
      class="ds-c-dialog__body"
    >
      <div
        id="dialog--3__content"
      />
      <div
        class="ds-c-dialog__actions"
      >
        <button>
          Click here
        </button>
      </div>
    </div>
  </div>
</dialog>
`;

exports[`DS Modal Dialog renders with additional classNames and size 1`] = `
<dialog
  aria-labelledby="dialog--2__heading"
  class="ds-c-dialog test-dialog ds-c-dialog--full"
  id="dialog--2"
  open=""
  role="dialog"
  rootid="static-id"
  tabindex="-1"
>
  <div
    class="ds-c-dialog__window"
  >
    <div
      class="ds-c-dialog__header test-header"
    >
      <h2
        class="ds-c-dialog__heading"
        id="dialog--2__heading"
      >
        dialog heading
      </h2>
      <button
        aria-label="Close modal dialog"
        class="ds-c-close-button ds-c-dialog__close"
        id="dialog--2__close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="ds-c-icon ds-c-icon--close ds-c-icon--close-thin "
          id="dialog--2__close__icon"
          viewBox="-2 -2 18 18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 13.0332964L13.0332964 0M13.0332964 13.0332964L0 0"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <div
      class="ds-c-dialog__body"
    >
      <div
        id="dialog--2__content"
      >
        Foo
      </div>
      <div
        class="ds-c-dialog__actions test-action"
      >
        &lt;span&gt;Pretend these are actions&lt;/span&gt;
      </div>
    </div>
  </div>
</dialog>
`;
